test/fail/list_assign_wrong_class.ly
<@lily
    method mval(integer a):integer { return 10 }
    list[method():integer] lst = [mval] @>
